@@ -17,6 +17,7 @@ package au.gov.asd.tac.constellation.graph.attribute.interaction;
 
 import au.gov.asd.tac.constellation.graph.attribute.AttributeDescription;
 import au.gov.asd.tac.constellation.graph.attribute.AttributeRegistry;
+import java.lang.reflect.InvocationTargetException;
 import java.util.logging.Logger;
 
 /**
@@ -42,9 +43,12 @@ public interface AttributeValueTranslator {
 
     public static AttributeValueTranslator getNativeTranslator(final String attrType) {
         try {
-            final AttributeDescription description = AttributeRegistry.getDefault().getAttributes().get(attrType).newInstance();
+            final AttributeDescription description = AttributeRegistry.getDefault()
+                    .getAttributes().get(attrType).getDeclaredConstructor().newInstance();
             return description::convertToNativeValue;
-        } catch (InstantiationException | IllegalAccessException ex) {
+        } catch (final IllegalAccessException | IllegalArgumentException
+                | InstantiationException | NoSuchMethodException
+                | SecurityException | InvocationTargetException ex) {
             LOGGER.warning("Could not create attribute description corresponding to the given type");
             return IDENTITY;
         }
